# thermal

./: .gitignore  CMakeLists.txt
.github/workflows/: ios-xeframework.yml
apps/android/jni/: CMakeLists.txt  JniConfig.cpp  JniEntry.cpp
apps/android/jni/include/thermal/jni/: BitmapUtils.hpp  JniCache.hpp
apps/cli/: CMakeLists.txt  main.cpp
apps/ios/: ThermalBridge.mm
apps/ios/include/thermal/ios/: ThermalBridge.h
apps/jni/: BitmapUtils.cpp  JniCache.cpp
apps/jni/include/thermal/jni/: JniConfig.hpp
build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt  thermal_core.lib  thermal_coreConfig.cmake
build-ninja/apps/cli/: cmake_install.cmake
cmake/: thermal_coreConfig.cmake.in
include/thermal/: core.hpp
src/: core.cpp  thermal_jni.cpp  win_exports.cpp
temp_build-android-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
temp_build-android-arm64/apps/cli/: cmake_install.cmake
